--- a/test/fixtures/carts.yml
+++ b/test/fixtures/carts.yml
@@ -4,8 +4,16 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+  name: Dave Thomas
+  address: MyText
+  email: dave@example.org
+  pay_type: Check	
 # column: value
 #
-two: {}
+two: 
+   name: MyString
+   address: MyText
+   email: MyString
+   pay_type: MyString
 #  column: value
