added atom feeder and Orders page"

--- a/test/fixtures/carts.yml
+++ b/test/fixtures/carts.yml
@@ -4,16 +4,8 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: 
-  name: Dave Thomas
-  address: MyText
-  email: dave@example.org
-  pay_type: Check	
+one: {}
 # column: value
 #
-two: 
-   name: MyString
-   address: MyText
-   email: MyString
-   pay_type: MyString
+two: {}
 #  column: value
