--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,9 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
 one:
-  product: ruby 
+  product: ruby
   order: one 
 
 two:
-  product: ruby 
-  cart: one 
+  product: ruby
+  order: one 
